<resources>
    <string name="app_name">Check Verification System</string>

    <!-- PinLoginActivity screen !-->
    <string name="login_message_pin_only">LOGIN WITH PASSCODE</string>
    <string name="login_message_both">LOGIN WITH FINGERPRINT OR PASSCODE</string>
    <string name="fingerprint_error_text">Fingerprint Error</string>
    <string name="login_message_timeout">Last login more than 24 hours ago</string>
    <string name="fingerprint">Biometric login</string>
    <string name="test_email">test</string>

    <!-- Main screen - Text !-->
    <string name="dash_text">Dashboard</string>
    <string name="date_text">Date</string>
    <string name="total_text">Total in System</string>
    <string name="verified_text">Verified</string>
    <string name="added_text">Added</string>
    <string name="viewed_text">Viewed</string>
    <string name="today_text">Today</string>
    <string name="search_hint">Search by Name/Year/Phone Number…</string>
    <string name="number_placeholder">9999</string>
    <string name="nfc_text">NFC Disabled</string>
    <string name="no_nfc_text">NFC Disabled</string>
    <string name="no_customers_title">No Customers</string>
    <string name="no_customers_message">Cannot search for something non existent</string>
    <string name="bottom_nav_home_text">Home</string>
    <string name="bottom_nav_search_text">Search</string>

    <!-- Commands !-->
    <string name="try_again">TRY AGAIN</string>
    <string name="nfc_message">Please enable NFC</string>
    <string name="no_nfc_message">Device has no NFC</string>
    <string name="login_again">Logic Again</string>
    <string name="fingerprint_error">Fingerprint not read, try again!</string>
    <string name="change_photo">Change Customer Photo</string>
    <string name="take_id_photo">Take Picture of ID</string>
    <string name="add_customer">ADD</string>
    <string name="close_text">Close</string>
    <string name="refresh_text">Tap to Refresh</string>

    <!-- Firestore Database !-->
    <string name="database_main_collection">customers</string>
    <string name="database_error_title">Connection Error</string>
    <string name="database_error">Using saved data, check internet connection</string>
    <!-- Database Fields !-->
    <string name="field_profilePicPath">profilePicPath</string>
    <string name="field_customerIDPath">customerIDPath</string>
    <string name="field_verifiedToday">dateVerified</string>
    <string name="field_timeStampAdded">timeStampAdded</string>
    <string name="field_verificationHistory">verificationHistory</string>
    <!-- Error !-->
    <string name="year_error">Insert Year (Ex. 1999)</string>
    <string name="name_error">First + Last Name</string>

    <!-- PlaceHolder !-->
    <string name="fullname_placeholder">Full Name</string>
    <string name="phone_number_placeholder">Phone #: (###) ###-####</string>
    <string name="year_placeholder">Year of Birth</string>
    <string name="empty_placeholder">man, it\'s so empty...</string>
    <string name="output_data">output_data</string>

    <!-- Symbol !-->
    <string name="split">\`</string>

    <!-- User Choices !-->
    <string name="cancel">CANCEL</string>

    <!-- Account Login Sheet !-->
    <string name="login_title">Login</string>
    <string name="login_error_title">Wrong Login/Password</string>
    <string name="login_error_message">Please try again.</string>
    <string name="login_success_title">Logged In</string>
    <string name="login_success_message">Please enter pin</string>
    <string name="login_max_title">Too many attempts</string>
    <string name="login_max_message">Please contact admin</string>
    <string name="email_input_hint">Email</string>
    <string name="password_input_hint">Password</string>
    <string name="email_end_format">\@oasis.com</string>
    <string name="input_error">Incorrect Input</string>

    <!-- Add Customer Sheet !-->
    <string name="customer_sheet_title">New</string>
    <string name="name_input_hint">Full Name</string>
    <string name="dob_input_hint">Birth Year</string>
    <string name="phone_number_input_hint">Phone # (Optional)</string>
    <string name="phone_number_filled_input_hint">Phone #</string>
    <string name="license_pic_message_title">ID Picture Missing</string>
    <string name="license_pic_message">ID picture is required</string>
    <string name="upload_error_title">Upload Error</string>
    <string name="upload_error_message">Issue Uploading images</string>
    <string name="add_text">Add</string>
    <string name="view_text">View</string>
    <string name="edit_text">Edit</string>
    <string name="delete_customer_title">Delete Instruction</string>
    <string name="delete_customer_instruction">Long press delete button to delete Customer</string>
    <string name="editing_message_title">No Changes</string>
    <string name="editing_message">Nothing was changed</string>
    <string name="customer_exists_title">Customer Exists</string>
    <string name="customer_exists_message">Can\'t add existing customers</string>
    <string name="warning_message">Do not cash for this customer!</string>
    <string name="customer_updated_title">Success</string>
    <string name="customer_updated_message">Customer Updated</string>
    <string name="customer_added_title">Success</string>
    <string name="customer_added_message">Customer Added</string>
    <string name="customer_deleted_title">Deleted</string>
    <string name="customer_deleted_message">Customer has been deleted</string>
    <string name="store_text">Store</string>

    <!-- NFC Sheet !-->
    <string name="nfc_title">Tap Card</string>
    <string name="write_nfc_title">Write Successful</string>
    <string name="write_nfc_message">Tap to verify</string>
    <string name="read_nfc_title">Not Found</string>
    <string name="read_nfc_message">Customer not in system, update and try again</string>
    <string name="read_nfc_empty_message">Card has no data</string>

    <!-- History Sheet !-->
    <string name="history_title">History</string>
    <string name="history_error_title">No History</string>
    <string name="history_error_message">Customer has not used the NFC Card</string>
    <string name="ago_text">ago</string>
    <string name="oasis_text">Oasis</string>
    <string name="time_ago_text">Time ago</string>

    <!-- Settings Sheet !-->
    <string name="settings_title">Settings</string>
    <string name="reset_nfc_text">Reset Card</string>
    <string name="see_nfc_card">Read Card</string>
    <string name="show_nfc_prompt">Tap After Adding Customer</string>
    <string name="reset_app">Reset App</string>
    <string name="reset_app_message_1">Long Press reset button to confirm.</string>
    <string name="reset_app_message_2">App will close, open app again.</string>
    <string name="log_out">Log Out</string>
    <string name="account_text">Account</string>

    <!-- Info Sheet !-->
    <string name="info_title">Credits</string>
    <string name="credits_text">

        <font color='#ff6600'>Icons from Flaticon</font>\n
        www.flaticon.com\n\n

        Github Libraries Used:\n\n

        <font color='#ff6600'>Icon Animations</font>\n
        https://github.com/airbnb/lottie-android \n\n

        <font color='#ff6600'>Image Loading</font>\n
        https://github.com/bumptech/glide \n\n

        <font color='#ff6600'>Toasts</font>\n
        https://github.com/Spikeysanju/MotionToast \n\n

        <font color='#ff6600'>Pin</font>\n
        https://github.com/mukeshsolanki/android-otpview-pinview \n\n

        <font color='#ff6600'>Bottom Navigation</font>\n
        https://github.com/irfaan008/IRBottomNavigationView \n\n

        <font color='#ff6600'>Bottom Sheets</font>\n
        https://github.com/Deishelon/RoundedBottomSheet \n\n

        <font color='#ff6600'>Image Picker</font>\n
        https://github.com/Drjacky/ImagePicker \n\n

        <font color='#ff6600'>Loading</font>\n
        https://github.com/yash786agg/AnimatedLoadingIndicator \n\n

        <font color='#ff6600'>Full Screen Image Viewer</font>\n
        https://github.com/stfalcon-studio/StfalconImageViewer \n\n
    </string>

    <!-- Saved Preference Data !-->
    <string name="fingerprint_pref">fingerprint</string>
    <string name="fingerprint_enabled">enabled</string>
    <string name="login_pref">login</string>
    <string name="last_update_pref">last update</string>
    <string name="account_login_pref">account login</string>
    <string name="show_nfc_prompt_pref">nfc prompt</string>

</resources>