<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/customer_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_8"
        app:cardBackgroundColor="@color/gray"
        android:layout_marginVertical="@dimen/dimen_4"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:padding="@dimen/dimen_12"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/history_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date_text"
                    android:layout_weight="3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/dimen_12">
                </TextView>

                <TextView
                    android:id="@+id/store"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/oasis_text"
                    android:layout_weight="7"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:textColor="@color/blueDark"
                    android:textSize="@dimen/dimen_12">
                </TextView>

            </LinearLayout>

            <TextView
                android:id="@+id/time_elapsed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_4"
                android:text="@string/time_ago_text"
                android:gravity="center"
                android:textColor="@color/gumbo"
                android:textSize="@dimen/dimen_12">
            </TextView>

        </LinearLayout>

</com.google.android.material.card.MaterialCardView>